Fix pause regression test Java compatibility